Fixes slight spacing issues with different screen sizes

--- a/ds-blog/src/App.css
+++ b/ds-blog/src/App.css
@@ -14,6 +14,7 @@ div.container {
 
     @media (max-width: 390px) {
       padding-top: 42px;
+      padding-bottom: 42px;
     }
   }
 }
