--- a/ds-blog/src/components/EntrySection/EntrySection.css
+++ b/ds-blog/src/components/EntrySection/EntrySection.css
@@ -46,7 +46,7 @@ div.entry-section-container {
     &.recent-ipad-container {
       display: flex;
       flex-direction: column;
-      gap: 56px;
+      gap: 20px;
 
       div.first-row {
         flex: 1 1 100%;
@@ -67,7 +67,7 @@ div.entry-section-container {
     &.recent-mobile-container {
       display: flex;
       flex-direction: column;
-      gap: 32px;
+      gap: 24px;
     }
   }
 }
